crates/gx/tests/snapshots/resolve_list.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 0
---- stdout ----
alpha
beta
gamma-utils

---- stderr ----
