crates/gx/tests/snapshots/resume_missing.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 1
---- stdout ----

---- stderr ----
Project 'nonexistent-xyzzy' not found in index
