crates/gx/tests/snapshots/resume_no_arg.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 1
---- stdout ----

---- stderr ----
Usage: gx resume <name>
