crates/gx/tests/snapshots/shell_init_unsupported.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 1
---- stdout ----

---- stderr ----
Unsupported shell: cmd
Supported shells: zsh, bash, fish, powershell
