crates/gx/tests/snapshots/unknown_arg_resolves_as_name.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 1
---- stdout ----

---- stderr ----
Project 'zzz-not-a-project' not found
